test_suite/tests/ui/duplicate-attribute/rename-ser-rename.stderr
error: duplicate serde attribute `rename`
  --> $DIR/rename-ser-rename.rs:12:10
   |
12 | #[derive(Serialize)]
   |          ^^^^^^^^^

error: aborting due to previous error

